ch09/ch09-start/iac-macro-usage/tests/fails/no_bucket_name.stderr
error: bucket needs a name
 --> tests/fails/no_bucket_name.rs:5:7
  |
5 |       bucket
  |       ^^^^^^
